# Podstawy-Programowania-Project

./: CMakeLists.txt  README.md  main.c  test.db
database_actions/: callback.c  callback.h  database.c  database.h  datatypes.c  datatypes.h
menu/: admin_panel.c  admin_panel.h  login_panel.c  login_panel.h  logo.c  logo.h  register_panel.c  register_panel.h  showmenu.c  showmenu.h  user_panel.c  user_panel.h
movies_db/: movies.c  movies.h
rooms/: plan.c  plan.h  rooms.c  rooms.h
